Issue #SB-14002 fix: Card badge alignment in Urdu

--- a/src/app/client/src/assets/styles/components/_buttons.scss
+++ b/src/app/client/src/assets/styles/components/_buttons.scss
@@ -28,7 +28,6 @@ a.sb-btn {
   min-width: ($base-block-space * 8);
   @include border-radius(3px);
   position: relative;
-  line-height: 1.5;
   text: {
     transform: capitalize;
     decoration: none;
@@ -664,5 +663,9 @@ a.sb-btn {
 }
 
 *[lang="hi"] .sb-btn-xs {
+  line-height: 2.2;
+}
+
+*[lang="hi"] .sb-btn-normal {
   line-height: 2.2;
 }
